@@ -1,13 +1,16 @@
 import static java.util.Locale.LanguageRange.parse;
+import static model.LottoType.AUTO;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 import model.Lotto;
 import model.LottoNumber;
 import model.Lottos;
 import model.Rank;
-import model.RankCounter;
+import model.WinningLotto;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
 
@@ -20,18 +23,22 @@ public class LottosTest {
             "'1,2,3,4,44,45', FOUR_MATCH",
             "'1,2,3,43,44,45', THREE_MATCH"
     })
-    void 등수_정확히_판별(String input, String expectedRank) {
-        List<LottoNumber> numbers = Arrays.stream(input.split(","))
-                .map(String::trim)
-                .map(Integer::parseInt)
-                .map(LottoNumber::new)
-                .toList();
+    void 등수_정확히_판별한다(String numbers, Rank expectedRank) {
+        Lotto winning = new Lotto(List.of(
+                LottoNumber.valueOf(1), LottoNumber.valueOf(2),
+                LottoNumber.valueOf(3), LottoNumber.valueOf(4),
+                LottoNumber.valueOf(5), LottoNumber.valueOf(6)
+        ),AUTO);
+        LottoNumber bonus = LottoNumber.valueOf(7);
+        WinningLotto winningLotto = new WinningLotto(winning, bonus);
 
-        Lotto lotto = new Lotto(numbers);
-        Lottos lottos = new Lottos(List.of(lotto));
-        Lotto winning = new Lotto(List.of(1, 2, 3, 4, 5, 6).stream().map(LottoNumber::new).toList());
-        RankCounter counter = lottos.countRanks(winning);
+        List<LottoNumber> matchedNumbers = Arrays.stream(numbers.split(","))
+                .map(s -> LottoNumber.valueOf(Integer.parseInt(s.trim())))
+                .collect(Collectors.toList());
 
-        assertEquals(1, counter.getRankCounts().get(Rank.valueOf(expectedRank)));
+        Lottos lottos = new Lottos(List.of(new Lotto(matchedNumbers,AUTO)));
+        Map<Rank, Integer> result = lottos.countResult(winningLotto);
+
+        assertEquals(1, result.get(expectedRank));
     }
 }
